--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,7 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "flask-login>=0.6.3",
     "flask-wtf>=1.2.1",
+    "pandas>=2.2.3",
+    "numpy>=2.1.2",
+    "scikit-learn>=1.5.2",
 ]
