--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,6 @@ dependencies = [
     "wtforms>=3.1.2",
     "tensorflow>=2.14.0",
     "schedule>=1.2.2",
+    "cachetools>=5.5.1",
+    "pytz>=2024.2",
 ]
