--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "frontend",
   "private": true,
@@ -18,6 +17,7 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
