--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,5 @@ dependencies = [
     "flask-caching>=2.3.0",
     "gevent>=24.11.1",
     "gevent-websocket>=0.10.1",
+    "imbalanced-learn>=0.13.0",
 ]
