--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "flask-login>=0.6.3",
     "flask-wtf>=1.2.1",
     "pandas>=2.2.3",
-    "numpy>=2.1.2",
+    "numpy==1.24.3",
     "scikit-learn>=1.5.2",
     "xgboost>=2.1.1",
     "lightgbm>=4.5.0",
