--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,4 +29,5 @@ dependencies = [
     "gevent>=24.11.1",
     "gevent-websocket>=0.10.1",
     "imbalanced-learn>=0.13.0",
+    "pywebpush>=1.14.3",
 ]
