--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "flask-login>=0.6.3",
     "flask-wtf>=1.2.1",
-    "pandas==2.2.3",
-    "numpy==1.26.4",
+    "pandas>=2.2.0",
+    "numpy>=1.26.0",
     "scikit-learn==1.4.1.post1",
     "xgboost==2.0.3",
     "lightgbm>=4.5.0",
