Agent query: He logrado resolver varios problemas de configuración y dependencias circulares, pero aún estamos teniendo algunos problemas con el despliegue. ¿Te gustaría que intentemos un enfoque diferente para el despliegue o prefieres que siga depurando los problemas actuales?
Refactor: Refactored Flask application structure to improve organization and fix deployment issues; moved extension initialization to `extensions.py` and corrected the application startup command.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,5 @@ dependencies = [
     "gevent-websocket==0.10.1",
     "imbalanced-learn>=0.13.0",
     "pywebpush>=1.14.3",
+    "imblearn>=0.0",
 ]
