Agent query: He actualizado las pruebas de integración para el endpoint de predicciones con autenticación adecuada y mejor manejo del contexto de la aplicación Flask. ¿Desea que continúe con la ejecución de las pruebas o prefiere que nos enfoquemos en otro aspecto del sistema?
Add pytest testing framework and implement comprehensive tests for the predictions API endpoint, including error handling and caching verification.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,6 @@ dependencies = [
     "pywebpush>=1.14.3",
     "imblearn>=0.0",
     "flask-cors>=5.0.1",
+    "pytest>=8.3.4",
+    "pytest-flask>=1.3.0",
 ]
