--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,5 @@ dependencies = [
     "gevent-websocket==0.10.1",
     "imbalanced-learn>=0.13.0",
     "pywebpush>=1.14.3",
+    "flask-cors>=5.0.1",
 ]
