--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,48 +1,21 @@
+
 {
   "name": "TransMilenio Security",
   "short_name": "TM Security",
-  "description": "Plataforma de reportes y seguimiento de incidentes de seguridad en TransMilenio",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1e293b",
+  "background_color": "#ffffff",
   "theme_color": "#1e293b",
-  "orientation": "portrait-primary",
-  "scope": "/",
-  "categories": ["security", "transportation", "utilities"],
   "icons": [
     {
       "src": "/static/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/static/icons/icon-512x512.png", 
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ],
-  "shortcuts": [
-    {
-      "name": "Reportar Incidente",
-      "short_name": "Reportar",
-      "description": "Reportar un nuevo incidente de seguridad",
-      "url": "/report_incident",
-      "icons": [{ "src": "/static/icons/report-192x192.png", "sizes": "192x192" }]
-    },
-    {
-      "name": "Ver Notificaciones",
-      "short_name": "Notificaciones",
-      "description": "Ver historial de notificaciones",
-      "url": "/notifications",
-      "icons": [{ "src": "/static/icons/notifications-192x192.png", "sizes": "192x192" }]
-    }
-  ],
-  "related_applications": [],
-  "prefer_related_applications": false,
-  "capture_links": "existing-client-navigate",
-  "display_override": ["standalone", "minimal-ui"],
-  "lang": "es-CO",
-  "dir": "ltr"
+  ]
 }
