--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[project]
+o[project]
 name = "repl-nix-transmileniosafetyapp"
 version = "0.1.0"
 description = "Add your description here"
@@ -32,4 +32,5 @@ dependencies = [
     "pywebpush>=1.14.3",
     "flask-cors>=5.0.1",
     "eventlet>=0.39.1",
+    "scrypt>=0.8.27",
 ]
