--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ SQLAlchemy==1.4.46
 Werkzeug==2.0.3
 gevent==22.10.2
 gevent-websocket==0.10.1
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 python-dotenv==0.21.1
 scikit-learn==1.0.2
 pandas==1.5.3
@@ -18,3 +18,7 @@ joblib==1.2.0
 matplotlib==3.7.0
 seaborn==0.12.2
 scrypt==0.8.27
+gunicorn==20.1.0
+tensorflow-cpu==2.10.0
+schedule==1.1.0
+click==8.0.4
