--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ numpy==1.24.2
 joblib==1.2.0
 matplotlib==3.7.0
 seaborn==0.12.2
+scrypt==0.8.20
 gunicorn==20.1.0
 tensorflow-cpu==2.10.0
 schedule==1.1.0
